<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#93B4A5"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/amiko_semibold"
                android:text="@string/enter_room"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".70"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/buttonCheck"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".30"
                    android:fontFamily="@font/amiko_semibold"
                    android:text="@string/ok"
                    android:textSize="18sp" />


            </LinearLayout>
        </LinearLayout>

        <requestFocus />

        <RelativeLayout
            android:id="@+id/contextLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="visible">

            <Button
                android:id="@+id/buttonCheck4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/buttonCheck4"
                android:layout_alignParentTop="true"
                android:layout_marginTop="219dp"
                android:layout_marginBottom="0dp"
                android:layout_weight=".30"
                android:fontFamily="@font/amiko_semibold"
                android:onClick="switchLevel"
                android:text="@string/ok"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="0dp"
                android:layout_weight=".70"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="125dp"
                android:fontFamily="@font/amiko_semibold"
                android:text="@string/enter_level"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonCheck4"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="19dp"
                android:padding="25dip">

                <TableRow
                    android:id="@+id/tableRowLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dip">

                    <TextView
                        android:id="@+id/textViewLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:fontFamily="@font/amiko_semibold"
                        android:text="@string/light"
                        android:textAlignment="center"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textViewLightValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amiko_semibold"
                        android:textAlignment="center"
                        android:textColor="#1976D2"
                        android:textSize="24sp" />

                </TableRow>
            </TableLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="180dp"
                android:layout_height="185dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="322dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/ic_bulb_on" />

            <LinearLayout
                android:id="@+id/linearLayoutButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/button1"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginRight="14dp"
                    android:fontFamily="@font/amiko_semibold"
                    android:onClick="switchLight"
                    android:text="@string/lightonoff"
                    android:textSize="18sp" />

            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>